No more window descriptor required right click contxt menu prevented for wasm

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <script type="module">
     import init from './target/wasm.js'
     init()
+
+    document.addEventListener('contextmenu', function (evt) {
+        evt.preventDefault();
+    })
 </script>
 </body>
 </html>
