--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <script type="module">
-    import init from './target/wasm.js'
+    import init from './minesweeper-tutorial.js'
     init()
 
     document.addEventListener('contextmenu', function (evt) {
